<resources>
    <string name="app_name" translatable="false">Faveo Helpdesk Community</string>
    <string name="facebook_app_id">1139653046135923</string>
    <string name="fb_login_protocol_scheme">fb1139653046135923</string>
    <string name="title_activity_client_profile" translatable="false">ClientProfile</string>
    <string name="title_activity_forgot_password" translatable="false">ForgotPassword</string>
    <string name="title_activity_splash" translatable="false">Faveo</string>
    <string name="title_activity_ticket_detail" translatable="false">TicketDetail</string>
    <string name="create_ticket_disabled_message" translatable="false">Disabled</string>
    <string name="static_shortcut_long_label" translatable="false">Create a new ticket</string>
    <string name="static_shortcut_short_label" translatable="false">Create ticket</string>
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>
    <string name="title_activity_save" translatable="false"></string>
    <string name="title_activity_main" translatable="false">Faveo</string>
    <string name="create_ticket">Create ticket</string>
    <string name="my_tickets">My tickets</string>
    <string name="unassigned_tickets">Unassigned tickets</string>
    <string name="closed_tickets">Closed tickets</string>
    <string name="client_list">Client list</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="action_search">Search</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="search_result">Search Result!</string>
    <string name="search_hint">Search…</string>
    <string name="menu_search">Search</string>
    <string name="just_now">Just now</string>
    <string name="title_activity_create_ticket" translatable="false">CreateTicketActivity</string>
    <string name="title_activity_search" translatable="false">SearchActivity</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="blue_name" translatable="false">blue</string>
    <string name="internal_note">Internal Notes</string>
    <string name="dummy_title" translatable="false">Dummy title</string>
    <string name="dummy_name" translatable="false">Client Name</string>
    <string name="dummy_mail_id" translatable="false">example@gmail.com</string>
    <string name="company" translatable="false">Company</string>
    <string name="status">Status</string>
    <string name="email">Email</string>
    <string name="reset_password">Reset password</string>
    <string name="helpdesk_url">Helpdesk URL</string>
    <string name="user_name">User Name/Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="api_key_optional">API Key(Optional)</string>
    <string name="empty_username">Empty username</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="inbox">Inbox</string>
    <string name="loading">Loading…</string>
    <string name="message">Message</string>
    <string name="create">Create</string>
    <string name="reply">Reply</string>
    <string name="cc" translatable="false">Cc</string>
    <string name="send">Send</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="add">ADD</string>
    <string name="aaaa_0001_0000001" translatable="false">#AAAA–0001–0000001</string>
    <string name="dummy_sub" translatable="false">Subject of the ticket test string abcdefghijklmnopqrstuvwxyz</string>
    <string name="overdue">Overdue</string>
    <string name="required">Required</string>
    <string name="img_name" translatable="false">img_name</string>
    <string name="_300_kb" translatable="false">(300 kb)</string>
    <string name="sla_plans">SLA Plans</string>
    <string name="helptopic">Helptopic</string>
    <string name="deparment">Department</string>
    <string name="priority">Priority</string>
    <string name="subject">Subject</string>
    <string name="email_address" translatable="false">Email Address</string>
    <string name="version_2_0" translatable="false">Version: 2.0</string>
    <string name="faveo_helpdesk" translatable="false">Faveo HELPDESK</string>
    <string name="faveo_content">Headquartered in Bangalore, Faveo HELPDESK provides Businesses with an automated Helpdesk system to manage customer support.  The word Faveo comes from Latin which means to be favourable. Which truly highlights vision and the scope as well as the functionality of the product that Faveo is. It is specifically designed to cater the needs of startups and SME’s empowering them with state of art, ticket based support system. In today’s competitive startup scenario customer retention is one of the major challenges. Handling client query diligently is all the difference between retaining or losing a long lasting relationship. The company is driven with passion of providing tools for managing consumer queries for strategic insights and helping companies take those decisive decisions.</string>
    <string name="website">Website</string>
    <string name="faveo_url" translatable="false">www.faveohelpdesk.com</string>
    <string name="submit">Submit</string>
    <string name="not_available">Not Available</string>
    <string name="source">Source</string>
    <string name="due_date">Due Date</string>
    <string name="created_date">Created Date</string>
    <string name="last_response_date">Last Response Date</string>
    <string name="assign_to" translatable="false">Assign To</string>
    <string name="save">Save</string>
    <string name="trash">Trash</string>
    <string name="logout">Logout</string>
    <string name="ticket_list">Show Ticket list</string>
    <string name="no_records">No Records!</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="send_crash_reports">Send crash reports</string>
    <string name="crash_reports">CRASH REPORTS</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="sort_by">Sort by</string>
    <string name="due_by_time">Due by time</string>
    <string name="due_by_date">Due by date</string>
    <string name="gallery">Gallery</string>
    <string name="search">Search</string>
    <string name="oops_no_internet">Oops! No internet</string>
    <string name="unexpected_error">Unexpected Error</string>
    <string name="fetching_tickets">Fetching tickets</string>
    <string name="sry_not_connected_to_internet">Sorry! Not connected to internet</string>
    <string name="connected_to_internet">Connected to Internet</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="creating_ticket">Creating ticket</string>
    <string name="ticket_created_success">Ticket created successfully!</string>
    <string name="error_creating_ticket">ERROR! Failed to create ticket</string>
    <string name="fill_all_the_details">Please fill all the required fields</string>
    <string name="fill_firstname">Fill FirstName</string>
    <string name="firstname_minimum_char">FirstName should be minimum 3 characters</string>
    <string name="firstname_maximum_char">FirstName should not exceed 20 characters</string>
    <string name="fill_lastname">Fill LastName</string>
    <string name="invalid_email">Please enter valid email id</string>
    <string name="sub_must_not_be_empty">Subject must not be empty</string>
    <string name="msg_must_not_be_empty">Message must not be empty</string>
    <string name="sub_minimum_char">Subject must have atleast 5 characters</string>
    <string name="msg_minimum_char">Message must have atleast 10 characters</string>
    <string name="you_hvent_picked_anything">You haven\'t picked anything!</string>
    <string name="welcome">Welcome!</string>
    <string name="dummy_date" translatable="false">6th Dec 2016</string>
    <string name="client_name">Client name</string>
    <string name="sorting_type">Sorting type</string>
    <string name="sort">Sort</string>
    <string name="ex_number" translatable="false">EX:+91 9999999999</string>
    <string name="dummy_num" translatable="false">Unavailable</string>
    <string name="all_caught_up">All tickets are loaded!</string>
    <string name="all_clients_loaded">All clients are loaded</string>
    <string name="enter_valid_email">Enter a valid Mail ID</string>
    <string name="updating_ticket">Updating ticket</string>
    <string name="customers">Customers</string>
    <string name="restart_app">To apply the changes in settings, you must restart the app!</string>
    <string name="restarting">Restarting…</string>
    <string name="press_again_exit">Press again to EXIT!</string>
    <string name="active">ACTIVE</string>
    <string name="inactive">INACTIVE</string>
    <string name="no_clients">No Clients!</string>
    <string name="no_results_found">No Results found!</string>
    <string name="update_success">Successfully Updated</string>
    <string name="failed_to_update_ticket">Failed to update ticket</string>
    <string name="please_fill_field">Please fill the field</string>
    <string name="fetching_detail">Fetching detail</string>
    <string name="please_enter_valid_url">Please enter a valid url</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="error_verifying_url">Please check your Helpdesk URL</string>
    <string name="access_denied">Access denied!</string>
    <string name="please_purchase_faveo">Please purchase Faveo PRO edition to use this app.</string>
    <string name="ok">OK</string>
    <string name="error_checking_pro">Error, while checking Access to Pro Edition!</string>
    <string name="signing_in">Signing in…</string>
    <string name="wrong_credentials">Wrong Credentials</string>
    <string name="error">Error</string>
    <string name="verifying_url">Verifying URL</string>
    <string name="access_checking">Access checking!</string>
    <string name="restart_app_tittle">Restart App ?</string>
    <string name="done_loading">Done Loading!</string>
    <string name="creating_note">Creating note</string>
    <string name="wrong_user_id">Wrong userID</string>
    <string name="invalid_cc">Invalid Cc</string>
    <string name="sending_msg">Sending message</string>
    <string name="due_today">DueToday</string>
    <string name="internal_notes_posted">Internal notes posted</string>
    <string name="posted_reply">Posted your reply</string>
    <string name="conversation">Conversation</string>
    <string name="detail">Details</string>
    <string name="open_ticket">OPEN TICKET</string>
    <string name="closed_ticket">CLOSED TICKET</string>
    <string name="ticket_type" translatable="false">Ticket Type </string>
    <string name="code" translatable="false">Code</string>
    <string name="mobile" translatable="false">Mobile</string>
    <string name="name" translatable="false">Name</string>
    <string name="only_special_characters_not_allowed_here">Only special characters not allowed here</string>
    <string name="sub_must_not_exceed">Subject must not exceed 100 characters</string>
    <string name="please_select_some_priority">Please select some Priority</string>
    <string name="select_some_helptopic">Please select some helptopic</string>
    <string name="wondering_what_will_be_your_helpdesk_url">Wondering what will be your helpdesk URL?</string>
    <string name="this_is_the_url">This is the URL where your help desk is installed.You can reach out to your IT admin to know more.</string>
    <string name="for_more_information_please_drop_a_mail_to_support_ladybirdweb_com">For more information please drop a mail to support@ladybirdweb.com</string>
</resources>