<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/action_time"
            android:title="@string/due_by_time"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_date"
            android:title="@string/due_by_date"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_status"
            android:title="@string/status"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_priority"
            android:title="@string/priority"
            app:showAsAction="ifRoom" />
    </group>
    <!--<group>-->
    <!--<item-->
    <!--android:id="@+id/action_asc"-->
    <!--android:title="Ascending"-->
    <!--app:showAsAction="ifRoom" />-->
    <!--<item-->
    <!--android:id="@+id/action_dsc"-->
    <!--android:title="Descending"-->
    <!--app:showAsAction="ifRoom" />-->
    <!--</group>-->
</menu>