<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:alpha="0.6"
        android:background="@color/faveo"
        android:drawableLeft="@drawable/ic_sort_black_24dp"
        android:gravity="center|start"
        android:text="@string/sort_by"
        android:textColor="@color/shade_white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:id="@+id/item_by_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="100"
            android:text="@string/due_by_time"
            android:textSize="16sp"
            android:textStyle="bold" />

        <co.helpdesk.faveo.pro.frontend.views.SmoothCheckBox
            android:id="@+id/scb_by_time"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:color_checked="@color/faveo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:id="@+id/item_by_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="100"
            android:text="@string/due_by_date"
            android:textSize="16sp"
            android:textStyle="bold" />

        <co.helpdesk.faveo.pro.frontend.views.SmoothCheckBox
            android:id="@+id/scb_by_date"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:color_checked="@color/faveo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:id="@+id/item_pri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="100"
            android:text="@string/priority"
            android:textSize="16sp"
            android:textStyle="bold" />

        <co.helpdesk.faveo.pro.frontend.views.SmoothCheckBox
            android:id="@+id/scb_pri"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:color_checked="@color/faveo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:id="@+id/item_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="100"
            android:text="@string/status"
            android:textSize="16sp"
            android:textStyle="bold" />

        <co.helpdesk.faveo.pro.frontend.views.SmoothCheckBox
            android:id="@+id/scb_status"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:color_checked="@color/faveo" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_200" />

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="38dp"-->
    <!--android:alpha="0.6"-->
    <!--android:background="@color/faveo"-->
    <!--android:drawableLeft="@drawable/ic_action_order"-->
    <!--android:gravity="center|start"-->
    <!--android:text="Order"-->
    <!--android:textColor="@color/shade_white"-->
    <!--android:textSize="18sp"-->
    <!--android:textStyle="bold" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:id="@+id/item_dsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="100"
            android:text="@string/descending"
            android:textSize="16sp"
            android:textStyle="bold" />

        <co.helpdesk.faveo.pro.frontend.views.SmoothCheckBox
            android:id="@+id/scb_dsc"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:color_checked="@color/faveo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:id="@+id/item_asc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="100"
            android:text="@string/ascending"
            android:textSize="16sp"
            android:textStyle="bold" />

        <co.helpdesk.faveo.pro.frontend.views.SmoothCheckBox
            android:id="@+id/scb_asc"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:color_checked="@color/faveo" />
    </LinearLayout>

</LinearLayout>