<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ticket"
    android:background="@color/grey_200"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_margin="8dp"
    android:layout_marginTop="6dp"
    card_view:cardCornerRadius="6dp"
    card_view:contentPadding="2dp"
    android:elevation="5dp"
    android:layout_marginBottom="-3dp"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/client"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingBottom="4dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingLeft="5dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:focusable="true"
        android:background="@drawable/custom_ripple">

        <!--<TextView-->
        <!--android:id="@+id/textView_client_id"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true" />-->

        <ImageView
            android:id="@+id/imageView_default_profile"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_textview"
            android:src="@drawable/default_pic"
            android:transitionName="@string/blue_name" />


        <TextView
            android:id="@+id/textView_client_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/imageView_default_profile"
            android:ellipsize="end"
            android:fontFamily="@font/hintedlainesansregular"
            android:maxLines="1"
            android:text="@string/dummy_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_client_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_client_name"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="1dp"
            android:layout_toRightOf="@+id/imageView_default_profile"
            android:alpha=".54"
            android:ellipsize="end"
            android:fontFamily="@font/hintedlainesansregular"
            android:maxLines="1"
            android:text="@string/dummy_mail_id"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>